Fixed overflow, changed design

--- a/2019/WebPractice/webmock/index.scss
+++ b/2019/WebPractice/webmock/index.scss
@@ -17,16 +17,16 @@ header{
 .menupromo{
     display: flex;
     justify-content: center;
+    height: 400px;
     >div{
-        border: 1px solid black;
-        margin: 5px;
+        margin: 8px;
         flex: 0 0 250px;
-        max-height: 200px;
-        
 
         img{
+            border: 1px solid black;
+            border-radius: 50%;
             width: 100%;
-            height: 100%;
+            height: 50%;
         }
         
     }
@@ -39,5 +39,5 @@ header{
 }
 
 .main{
-    background-color: hsla(70, 8%, 70%, 1)
+    background-color: rgb(255, 255, 255);
 }
